--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -1,5 +1,4 @@
 main {
-  background-color: #191e39;
   min-height: 100vh;
   padding: 1.5rem;
   max-width: fit-content;
@@ -10,6 +9,10 @@ section {
 }
 h1 {
   font-size: xx-large;
+  letter-spacing: 1.8px;
+}
+.top h2 {
+  margin: 0;
 }
 span {
   background: linear-gradient(
@@ -23,9 +26,28 @@ span {
   font-size: 3.5rem;
 }
 .bio {
-  margin: 5rem 0;
+  margin: 5rem 0 2rem 0;
   animation: slide 1s 1 ease-in;
 }
+
+.left-border {
+  border-left: 2.5px solid #303552;
+  padding-left: 1rem;
+  margin-bottom: 3rem;
+  letter-spacing: 2px;
+}
+.left-border p {
+  padding: 15px 0;
+  
+}
+.left-border h2 {
+   margin-bottom: 1rem;
+    
+  }
+  .left-border :last-child{
+    padding: 15px 0 0 0 ;
+    
+  }
 .border {
   border-top: 1px solid white;
   border-bottom: 1px solid white;
@@ -45,16 +67,16 @@ button {
   margin: 10px 0;
   max-width: fit-content;
 }
-button:hover{
-    color: rgb(255, 213, 0);
-    background-color: #191e39;
-    cursor: pointer;
+button:hover {
+  color: rgb(255, 213, 0);
+  background-color: #191e39;
+  cursor: pointer;
 }
 button a {
   all: unset;
 }
-h2{
-    margin:0 0 1.5rem 0 ;
+h2 {
+  margin: 0 0 1.5rem 0;
 }
 .projects {
   padding: 15px 10px;
@@ -69,54 +91,56 @@ h2{
   overflow: hidden;
   background-color: #1c2245;
 }
-.projects>div{
-    border:1px solid #303552;
+.projects > div {
+  border: 1px solid #303552;
 }
 .description {
   padding: 10px 15px 10px 15px;
 }
-.description h3{
-    margin-bottom: 10px;
-    letter-spacing: 1px;
+.description h3 {
+  margin-bottom: 10px;
+  letter-spacing: 1px;
 }
-.description p{
-    letter-spacing: 1px;
+.description p {
+  letter-spacing: 1px;
 }
 img {
   width: 100%;
 }
-.contact div{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.contact div {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-.contact h3{
-    display: flex;
-    gap: 0.8rem;
+.contact h3 {
+  display: flex;
+  gap: 0.8rem;
 }
-.contact .email{
-    margin: 1.5rem 0 0 0 ;
+.contact .email {
+  margin: 1.5rem 0 0 0;
 }
-form{
-    max-width: fit-content;
+form {
+  max-width: fit-content;
 }
-input, textarea{
-    border-radius: 10px;
-    padding: 10px 15px;
-    color: #15192f;
-    outline: none;
-    border: none;
-    margin-bottom: 1rem;
+input,
+textarea {
+  border-radius: 10px;
+  padding: 10px 15px;
+  color: #15192f;
+  outline: none;
+  border: none;
+  margin-bottom: 1rem;
 }
-form button{
-    margin: auto;
-    align-self: center;
+form button {
+  margin: auto;
+  align-self: center;
 }
-input:focus, textarea:focus{
-    border-bottom: 5px solid rgb(255, 213, 0);
+input:focus,
+textarea:focus {
+  border-bottom: 5px solid rgb(255, 213, 0);
 }
-::placeholder{
-    font-style: italic;
+::placeholder {
+  font-style: italic;
 }
 @keyframes slide {
   from {
@@ -128,5 +152,58 @@ input:focus, textarea:focus{
     opacity: 1;
   }
 }
-@media (min-width:1000px){
+@media (min-width: 425px) {
+  main {
+    padding: 1.5rem 2.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .border {
+    font-size: x-large;
+  }
+  h2 {
+    font-size: xx-large;
+  }
+  .contact {
+    display: flex;
+    justify-content: space-around;
+  }
+  .contact h2.email {
+    margin: 0;
+  }
+}
+@media (min-width: 1000px) {
+    section{
+        margin-bottom: 3rem;
+    }
+  h1 {
+    font-size: xxx-large;
+  }
+  span {
+    font-size: 4rem;
+  }
+  .top {
+    display: flex;
+    gap: 2rem;
+  }
+  .bottom {
+    margin-bottom: 3rem;
+  }
+  .projects {
+    grid-template-columns: 40vw;
+    max-height: 100vh;
+    overflow-y: scroll;
+    padding: 20px;
+  }
+
+  h3 {
+    font-size: x-large;
+  }
+  .border {
+    font-size: xx-large;
+    /* margin-left: 1rem; */
+  }
+  p {
+    font-size: larger;
+  }
 }
