--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,13 @@
     margin: 0;
     color: rgb(210, 209, 209);
     font-family: "Nunito", sans-serif;
-    
 }
 body{
    scrollbar-width: 3px;
+   background-color: #191e39
+}
+::-webkit-scrollbar{
+    width: 5px;
+    background-color:  rgb(210, 209, 209);
+    border-radius: 10px;
 }
