--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,6 +2,7 @@
     <nav>
         <ul>
             <li>Home</li>
+            <li>Projects</li>
             <li>Contact</li>
             <li>Bio</li>
         </ul>
