--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -11,7 +11,7 @@
           Angular Developer
         </h3>
         <button>
-          <a href="assets/lela-akiashvili resume.pdf" target="_blank"
+          <a href="assets/lela akiashvili CV.pdf" target="_blank"
             >Open CV</a
           >
         </button>
@@ -51,6 +51,13 @@
           <div class="description">
             <h3><a href="https://angular-final.netlify.app">Sport Today</a></h3>
             <p>Used: HTML, CSS, TypeScript, Angular, Firestore Database</p>
+          </div>
+        </div>
+        <div>
+          <img src="assets/weather-app.png" alt="" />
+          <div class="description">
+            <h3><a href="https://lela-akiashvili.github.io/weather-app/">Wather App</a></h3>
+            <p>Used: HTML, CSS, JavaScript</p>
           </div>
         </div>
       </div>
