--- a/src/app/features/projects/projects.component.css
+++ b/src/app/features/projects/projects.component.css
@@ -1,98 +1,77 @@
-  .projects {
-    padding: 15px 10px;
-    background-color: #15192f;
-    border-radius: 15px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 2rem 1rem;
+.projects {
+  padding: 15px 10px;
+  background-color: #15192f;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem 1rem;
+}
+.projects > div {
+  border-radius: 10px;
+  background-color: #1c2245;
+  border: 1px solid #303552;
+  overflow: hidden;
+}
+.description {
+  padding: 10px 15px;
+}
+.description h2 {
+  margin-bottom: 10px;
+  letter-spacing: 1px;
+}
+.description p {
+  letter-spacing: 1px;
+}
+img {
+  width: 100%;
+}
+p.note, .code {
+  margin: 1rem 0 0 0;
+}
+.code a, p a{
+  font-style: italic;
+  color: rgb(0, 140, 255);
+}
+span {
+  font-weight: 800;
+}
+@media (min-width: 425px) {
+  main {
+    padding: 1.5rem 2.5rem;
   }
-  .projects div {
-    border-radius: 10px;
-    overflow: hidden;
-    background-color: #1c2245;
-  }
-  .projects > div {
-    border: 1px solid #303552;
-  }
-  .description {
-    padding: 10px 15px 10px 15px;
-  }
-  .description h3 {
-    margin-bottom: 10px;
-    letter-spacing: 1px;
-  }
-  .description p {
-    letter-spacing: 1px;
-  }
+}
+@media (min-width: 615px) {
   img {
-    width: 100%;
+    width: 50%;
+    float: left;
+    border-bottom-right-radius: 15px;
+    margin-right: 1.5rem;
   }
-  p.note{
-    margin: 1rem 0;
+  /* .description{
+    margin: 0 0 10px 20px ;
+  } */
+}
+@media (min-width: 768px) {
+  h2 {
+    font-size: x-large;
   }
-  @media (min-width: 425px) {
-    main {
-      padding: 1.5rem 2.5rem;
-    }
+}
+@media (min-width: 960px) {
+  h1 {
+    font-size: xxx-large;
   }
-  @media (min-width: 768px) {
-    .border {
-      font-size: x-large;
-    }
-    h2 {
-      font-size: xx-large;
-    }
-    .contact {
-      display: flex;
-      justify-content: space-around;
-    }
-    .contact h2.email {
-      margin: 0;
-    }
+  .projects {
+    padding: 20px;
   }
-  @media (min-width: 960px) {
-    section {
-      margin-bottom: 3rem;
-    }
-    h1 {
-      font-size: xxx-large;
-    }
-    span {
-      font-size: 4rem;
-    }
-    .top {
-      display: flex;
-      gap: 2rem;
-    }
-    .bottom {
-      margin-bottom: 3rem;
-    }
-    .projects {
-      grid-template-columns: 40vw;
-      max-height: 100vh;
-      overflow-y: scroll;
-      padding: 20px;
-    }
-  
-    h3 {
-      font-size: x-large;
-    }
-    .border {
-      font-size: xx-large;
-      /* margin-left: 1rem; */
-    }
-    p {
-      font-size: larger;
-    }
+  p {
+    font-size: larger;
   }
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-      transform: translateY(20px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-  
+}
+@media (min-width:1200px){
+ section{
+  padding: 2rem;
+ }
+ h1{
+  margin:0 0 1rem 1rem;
+ }
+}
