--- a/src/app/features/projects/projects.component.html
+++ b/src/app/features/projects/projects.component.html
@@ -1,45 +1,104 @@
-<h2>PROJECTS</h2>
+<section>
+    <h1>PROJECTS</h1>
 <div class="projects">
-  <div>
+  <div class="side-by-side">
     <img src="assets/CSS-final.png" alt="" />
     <div class="description">
-      <h3><a href="https://first-final.netlify.app">Wix Template</a></h3>
+      <h2><a href="https://first-final.netlify.app">Wix Template</a></h2>
       <p>Used: HTML, SASS</p>
+      <p class="code">GitHub Code: <a href="https://github.com/lela-akiashvili/firstmidterm.git" target="_blank">here</a></p>
+      
       <p class="note">
-        Site Description: This site was built entirely with HTML and SASS,
-        inspired by a Wix template. It is fully responsive across all common
-        devices, with a strong emphasis on animations and breakpoints. I
-        imported various fonts from Google Fonts to enhance the design's appeal
-        and carefully utilized positioning for optimal layout.
+        <span> Site Description:</span>  <br>This site was built entirely with HTML
+        and SASS, inspired by a Wix template. <br />
+        It is fully responsive across all common devices, with a strong emphasis
+        on animations and breakpoints. I imported various fonts from Google
+        Fonts to enhance the design's appeal and carefully utilized positioning
+        for optimal layout.
       </p>
+      
     </div>
   </div>
-  <div>
+  <div class="side-by-side">
     <img src="assets/Javascript-final.png" alt="" />
     <div class="description">
-      <h3>
+      <h2>
         <a href="https://qing-jing-final.netlify.app">Pocket Library</a>
-      </h3>
+      </h2>
       <p>Used: HTML, CSS, Javascript</p>
+      <p class="code">GitHub Code: <a href="https://github.com/lela-akiashvili/pocketLibrary.git" target="_blank">here</a></p>
+    
       <p class="note">
-        by using JAvascript fetch api i bult
+        <span>Site Description:</span> <br> This site is built with HTML, CSS, and
+        JavaScript, with a strong emphasis on functionality. <br />
+        The main purpose is to allow visitors to search for movies of interest
+        based on the names of books they input. Additionally, the site offers
+        users the ability to find books by filtering and bookmarking them, even
+        without signing in. Authorization and authentication are simulated using
+        local storage as a database, enabling different users to maintain their
+        personal libraries.
+        <br />
+        For this project, I utilized two separate APIs: the Open Library API and
+        the OMDb API. However, since the OMDb API is not secure, obtaining movie
+        results is only possible when the site is run on a local host.
       </p>
     </div>
   </div>
-  <div>
+  <div class="side-by-side">
     <img src="assets/angular-final.png" alt="" />
     <div class="description">
-      <h3><a href="https://angular-final.netlify.app">Sport Today</a></h3>
+      <h2><a href="https://angular-final.netlify.app">Sport Today</a></h2>
       <p>Used: HTML, CSS, TypeScript, Angular, Firestore Database</p>
+      <p class="code">GitHub Code: <a href="https://github.com/lela-akiashvili/angular-final.git" target="_blank">here</a></p>
+      <p class="note">
+        <span>Site Description:</span> <br>
+        This site is dedicated to sports news, featuring mock data with
+        fictional characters. It enables users to scroll through the latest
+        sports news and filter it based on search input, sport, or creation
+        date. <br />
+        Signed-in users can favorite news articles to read later. Registered
+        users can also write, publish, and delete their own news articles, with
+        email verification ensuring the authenticity of registrations. <br />
+        The site mimics and extends the user hierarchy found in the Teams
+        application, offering four types of users: Regular User, Team's Coach,
+        Manager, and Player. Each user type has different capabilities:
+        <li>
+          Coach: Can add or delete players and managers (this functionality
+          needs to be correctly implemented).
+        </li>
+        <li>Manager: Can plan games and write announcements for the team.</li>
+        <li>
+          Player: Can read announcements and view games on their profile page.
+        </li>
+        This project extensively uses RxJS for stream control and database
+        connections, as well as reactive forms for various functionalities.
+      </p>
     </div>
   </div>
-  <div>
+  <div class="side-by-side">
     <img src="assets/weather-app.png" alt="" />
     <div class="description">
-      <h3>
-        <a href="https://lela-akiashvili.github.io/weather-app/">Wather App</a>
-      </h3>
+      <h2>
+        <a href="https://lela-akiashvili.github.io/weather-app-fetchApi/"
+        target="_blank">Wather App</a
+        >
+      </h2>
       <p>Used: HTML, CSS, JavaScript</p>
+      <p class="code">GitHub Code: <a href="https://github.com/lela-akiashvili/weather-app-fetchApi.git">here</a></p>
+
+      <p class="note">
+        <span>Site Description:</span> <br>
+        The site uses the Fetch API to fetch current weather data from
+        api.open-meteo.com. It displays the current date, temperature, and time.
+        Users can also check the weather and average temperature for the next
+        seven days, as well as the current temperature and time of any city they
+        search for in the search bar. The site uses local storage to save and
+        display data for searched cities. <br />
+        Same site, but built with XMLHttpRequests and without localStorage -
+        <a class="code" href="https://lela-akiashvili.github.io/weather-app/" target="_blank">here</a>.
+      </p>
     </div>
   </div>
 </div>
+</section>
+
