--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,8 +3,8 @@
         <ul>
             <li><a routerLink="/home">Home</a></li>
             <li><a routerLink="/projects">Projects</a></li>
-            <li>Contact</li>
-            <li><a routerLink="/bio">Bio</a></li>
+      <——      <li>Contact</li>
+            <li><a routerLink="/bio">Bio</a></li> ——>
         </ul>
     </nav>
 </header>
