--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,10 +1,10 @@
 <header>
     <nav>
-        <ul>
-            <li><a routerLink="/home">Home</a></li>
-            <li><a routerLink="/projects">Projects</a></li>
-            <li>Contact</li>
-            <li><a routerLink="/bio">Bio</a></li>
-        </ul>
+      <ul>
+        <li><a routerLink="/home">Home</a></li>
+        <li><a routerLink="/projects">Projects</a></li>
+        <li><a routerLink="/home" fragment="contact">Contact</a></li>
+        <li><a routerLink="/bio">Bio</a></li>
+      </ul>
     </nav>
-</header>
+  </header>
