--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
         <li><a routerLink="/home">Home</a></li>
         <li><a routerLink="/projects">Projects</a></li>
         <li><a routerLink="/home" fragment="contact">Contact</a></li>
-        <li><a routerLink="/bio">Bio</a></li>
+        <!-- <li><a routerLink="/bio">Bio</a></li> -->
       </ul>
     </nav>
   </header>
