--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -24,7 +24,7 @@
         <h3>Framework:</h3>
         <p>Angular, Bootstrap</p>
         <h3>Version Contorl:</h3>
-        <p>Github, Netlify</p>
+        <p>Github</p>
       </div>
     </div>
     <div>
