--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -11,7 +11,7 @@
           Angular Developer
         </h3>
         <button>
-          <a href="assets/lela akiashvili CV.pdf" target="_blank"
+          <a href="assets/Lela Akiashvili CV (1).pdf" target="_blank"
             >Open CV</a
           >
         </button>
@@ -22,9 +22,12 @@
         <p>HTML, CSS, SASS/SCSS, JavaScript/TypeScript</p>
 
         <h3>Framework:</h3>
-        <p>Angular, Bootstrap</p>
+        <p>Angular</p> 
+        <h3>Database:</h3>
+        <p>Firebase</p>
         <h3>Version Contorl:</h3>
         <p>Github</p>
+       
       </div>
     </div>
     <div>
@@ -46,6 +49,13 @@
             <p>Used: HTML, CSS, Javascript</p>
           </div>
         </div>
+        <div>
+          <img src="assets/Race project.png" alt="" />
+          <div class="description">
+            <h3><a href="projects/#disclaimer">Car Race Game</a></h3>
+            <p> Used: Angular Framework, Typescript, CSS, ESLint (Airbnb style guide)</p>
+          </div>
+        </div> 
         <div>
           <img src="assets/angular-final.png" alt="" />
           <div class="description">
